--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu">
   <h1 class="title__header">ViLauncher</h1></ul></ul></ul></ul></ul></ul></ul></ul></ul></ul>
                         <ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><p class="title__text">Лаунчер Майнкрафт - Простой. Удобный. Надежн</p></ul></ul></ul></ul></ul></ul></ul></ul><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><a href="https://pudghooker.github.io/vilauncher/ViLauncher.exe">Скачать ViLauncher</a></ul></ul></ul></ul></ul></ul></ul></ul></ul></ul>
-					<ul class="header__menu"><ul class="header__menu"><img src="../../Documents/Сайт без имени 5/img.png" width="833" height="391" alt=""/></ul></ul>
+					<ul class="header__menu"><ul class="header__menu"><img src="./img.png" width="833" height="391" alt=""/></ul></ul>
                     </div>
                 </div>
             </div>
