--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
             <div class="section__content">
                 <div class="title">
                   <div class="title__text-block">
-<ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu">
-  <h1 class="title__header">ViLauncher</h1></ul></ul></ul></ul></ul></ul></ul></ul></ul></ul>
-                        <ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><p class="title__text">Лаунчер Майнкрафт - Простой. Удобный. Надежн</p></ul></ul></ul></ul></ul></ul></ul></ul><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><ul class="header__menu"><a href="https://pudghooker.github.io/vilauncher/ViLauncher.exe">Скачать ViLauncher</a></ul></ul></ul></ul></ul></ul></ul></ul></ul></ul>
-					<ul class="header__menu"><ul class="header__menu"><img src="./img.png" width="833" height="391" alt=""/></ul></ul>
+  <h1 class="title__header">ViLauncher</h1>
+                        <p class="title__text">Лаунчер Майнкрафт - Простой. Удобный. Надежн</p><a href="https://pudghooker.github.io/vilauncher/ViLauncher.exe">Скачать ViLauncher</a>
+					<img src="./img.png" width="833" height="391" alt=""/>
                     </div>
                 </div>
             </div>
